sửa lỗi đỏ cho thằng oanh lần 2

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
@@ -153,7 +153,7 @@
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -161,19 +161,19 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Enter Name">
                                                     </div>
                                                 </div>
                                                 <div class="row g-2">
                                                     <div class="col mb-0">
                                                         <label for="emailBackdrop" class="form-label">Email</label>
-                                                        <input type="text" id="emailBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="xxxx@xxx.xx">
                                                     </div>
                                                     <div class="col mb-0">
                                                         <label for="dobBackdrop" class="form-label">DOB</label>
-                                                        <input type="text" id="dobBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="DD / MM / YY">
                                                     </div>
                                                 </div>
@@ -200,7 +200,7 @@
                                             data-bs-target="#backDropModal">
                                         Origin
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -209,12 +209,12 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -222,7 +222,7 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Enter Name">
                                                     </div>
                                                 </div>
@@ -261,7 +261,7 @@
                                             data-bs-target="#backDropModal">
                                         Manufacture
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -270,12 +270,12 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -283,19 +283,19 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Name">
                                                     </div>
                                                 </div>
                                                 <div class="row g-2">
                                                     <div class="col mb-0">
                                                         <label for="emailBackdrop" class="form-label">ID</label>
-                                                        <input type="text" id="idBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="ID">
                                                     </div>
                                                     <div class="col mb-0">
                                                         <label for="dobBackdrop" class="form-label">Code</label>
-                                                        <input type="text" id="codebBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Code">
                                                     </div>
                                                 </div>
@@ -322,7 +322,7 @@
                                             data-bs-target="#backDropModal">
                                         Color
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -331,12 +331,12 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -344,19 +344,19 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Name">
                                                     </div>
                                                 </div>
                                                 <div class="row g-2">
                                                     <div class="col mb-0">
                                                         <label for="emailBackdrop" class="form-label">ID</label>
-                                                        <input type="text" id="idBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="ID">
                                                     </div>
                                                     <div class="col mb-0">
                                                         <label for="dobBackdrop" class="form-label">Code</label>
-                                                        <input type="text" id="codebBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Code">
                                                     </div>
                                                 </div>
@@ -383,7 +383,7 @@
                                             data-bs-target="#backDropModal">
                                         Category
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -392,12 +392,12 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -405,19 +405,19 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Name">
                                                     </div>
                                                 </div>
                                                 <div class="row g-2">
                                                     <div class="col mb-0">
                                                         <label for="emailBackdrop" class="form-label">ID</label>
-                                                        <input type="text" id="idBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="ID">
                                                     </div>
                                                     <div class="col mb-0">
                                                         <label for="dobBackdrop" class="form-label">Code</label>
-                                                        <input type="text" id="codebBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Code">
                                                     </div>
                                                 </div>
@@ -444,7 +444,7 @@
                                             data-bs-target="#backDropModal">
                                         Resolution
                                     </button>
-                                    <select class="form-select" id="inputGroupSelect03"
+                                    <select class="form-select"
                                             aria-label="Example select with button addon">
                                         <option selected="">Choose...</option>
                                         <option value="1">One</option>
@@ -453,12 +453,12 @@
                                     </select>
                                 </div>
                                 <!-- Modal -->
-                                <div class="modal fade" id="backDropModal" data-bs-backdrop="static" tabindex="-1"
+                                <div class="modal fade" data-bs-backdrop="static" tabindex="-1"
                                      style="display: none;" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <form class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="backDropModalTitle">Modal title</h5>
+                                                <h5 class="modal-title">Modal title</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                             </div>
@@ -466,19 +466,19 @@
                                                 <div class="row">
                                                     <div class="col mb-3">
                                                         <label for="nameBackdrop" class="form-label">Name</label>
-                                                        <input type="text" id="nameBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Name">
                                                     </div>
                                                 </div>
                                                 <div class="row g-2">
                                                     <div class="col mb-0">
                                                         <label for="emailBackdrop" class="form-label">ID</label>
-                                                        <input type="text" id="idBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="ID">
                                                     </div>
                                                     <div class="col mb-0">
                                                         <label for="dobBackdrop" class="form-label">Code</label>
-                                                        <input type="text" id="codebBackdrop" class="form-control"
+                                                        <input type="text" class="form-control"
                                                                placeholder="Code">
                                                     </div>
                                                 </div>
