--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -11,8 +11,8 @@
                 <div class="col-lg-6 col-md-5">
                     <div class="header__top__right">
                         <div class="header__top__links">
-                            <a href="/login">Đăng nhập</a>
-                            <a href="/register">Đăng ký</a>
+                            <a style="color: #fff" href="/login">Đăng nhập</a>
+                            <a style="color: #fff"x` href="/register">Đăng ký</a>
                         </div>
                         <div class="header__top__hover">
                             <span>Ngôn Ngữ</span>
@@ -65,7 +65,7 @@
                 <div class="header__nav__option">
                     <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
                     <a href="#"><img src="/user/img/icon/heart.png" alt=""></a>
-                    <a href="#"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
+                    <a href="/"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
                     <div class="price">0</div>
                 </div>
             </div>
