--- a/webBanTiVi/src/main/resources/templates/login/page/forgot-password.html
+++ b/webBanTiVi/src/main/resources/templates/login/page/forgot-password.html
@@ -24,7 +24,25 @@
 </head>
 <body>
 <!-- Content -->
+<div class="header">
+  <nav class="header-navbar">
+    <ul class="header-nav-list">
+      <li class="header-nav-item">Hệ thống cửa hàng tivi</li>
+      <li class="header-nav-item">
+        <a class="header-nav-item-link" href="/">LOGO</a>
+      </li>
+    </ul>
 
+    <ul class="header-nav-list">
+      <li class="header-nav-item">
+        <a href="#" class="header-nav-item-link">HỎI ĐÁP</a>
+      </li>
+      <li class="header-nav-item">
+        <a href="/" class="header-nav-item-link">QUAY LẠI</a>
+      </li>
+    </ul>
+  </nav>
+</div>
 <div class="container-xxl">
   <div class="authentication-wrapper authentication-basic container-p-y">
     <div class="authentication-inner py-4">
@@ -162,17 +180,23 @@
     </div>
   </div>
 </div>
-
+<div class="footer">
+  <div class="footer-text">
+    Bạn gặp khó khăn gì khi đăng nhập, đăng ký ?Gọi
+    <span><a href="/hotro" class="sdt">1800 1008</a></span> để được hỗ trợ
+    nhanh nhất.
+  </div>
+</div>
 <!-- / Content -->
 
-<div class="buy-now">
-  <a
-          href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
-          target="_blank"
-          class="btn btn-danger btn-buy-now"
-  >Upgrade to Pro</a
-  >
-</div>
+<!--<div class="buy-now">-->
+<!--  <a-->
+<!--          href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"-->
+<!--          target="_blank"-->
+<!--          class="btn btn-danger btn-buy-now"-->
+<!--  >Upgrade to Pro</a-->
+<!--  >-->
+<!--</div>-->
 
 
 </body>
