--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -90,17 +90,10 @@
             <span class="menu-header-text">Management</span>
         </li>
         <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <a th:href="@{/admin/product}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-tv"></i>
-                <div data-i18n="Product">Product</div>
+                <div data-i18n="order">Product</div>
             </a>
-            <ul class="menu-sub">
-                <li class="menu-item">
-                    <a th:href="@{/admin/product}" class="menu-link">
-                        <div data-i18n="Account">Product</div>
-                    </a>
-                </li>
-            </ul>
         </li>
         <li class="menu-item">
             <a th:href="@{/admin/staff}" class="menu-link">
