--- a/webBanTiVi/src/main/resources/templates/admin/page/staff.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/staff.html
@@ -35,34 +35,25 @@
         <div class="card-body">
             <form id="formAccountSettings" method="POST" onsubmit="return false">
                 <div class="row">
-                    <div class="mb-3 col-md-6">
-                        <label for="firstName" class="form-label">Id</label>
-                        <input class="form-control" type="text" id="id" name="firstName" value="John"
-                               autofocus="">
+                    <div class="row g-3">
+                        <div class="col-sm-4">
+                            <label for="firstName" class="form-label">Code</label>
+                            <input class="form-control" type="text" id="code" name="firstName" placeholder="John"
+                                   autofocus="">
+                        </div>
+                        <div class="col-sm-4">
+                            <label for="firstName" class="form-label">First and last name</label>
+                            <input class="form-control" type="text" id="firstName" name="firstName" placeholder="John"
+                                   autofocus="">
+                        </div>
+                        <div class="col-sm-4">
+                            <label for="address" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="address" name="address" placeholder="Address">
+                        </div>
                     </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="firstName" class="form-label">Code</label>
-                        <input class="form-control" type="text" id="code" name="firstName" value="John"
-                               autofocus="">
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="firstName" class="form-label">First Name</label>
-                        <input class="form-control" type="text" id="firstName" name="firstName" value="John"
-                               autofocus="">
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="lastName" class="form-label">Last Name</label>
-                        <input class="form-control" type="text" name="lastName" id="lastName" value="Doe">
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="firstName" class="form-label">Middle Name</label>
-                        <input class="form-control" type="text" id="middleName" name="firstName" value="John"
-                               autofocus="">
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <!--                        <div class="row gy-3">-->
-                        <div class="col-md">
-                            <label for="name" class="mb-1">Gender</label> <br>
+                    <div class="row g-3">
+                        <div class="col-sm-4">
+                            <label class="mb-1">Gender</label> <br>
                             <div class="form-check form-check-inline mt-3">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
                                        value="option1">
@@ -79,63 +70,105 @@
                                 <label class="form-check-label" for="inlineRadio3">Other (disabled)</label>
                             </div>
                         </div>
-                        <!--                        </div>-->
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="html5-date-input" class="col-md-2 col-form-label">Date</label>
-                        <div class="col-md-10">
+                        <!--                        -->
+                        <div class="col-sm-4">
+                            <label for="html5-date-input" class="col-md-2 col-form-label">Date</label>
                             <input class="form-control" type="date" value="2021-06-18" id="html5-date-input">
                         </div>
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="html5-password-input" class="col-md-2 col-form-label">Password</label>
-                        <div class="col-md-10">
+                        <!--                        -->
+                        <div class="col-sm-4">
+                            <label for="html5-password-input" class="col-md-3 col-form-label">Password</label>
                             <input class="form-control" type="password" value="password" id="html5-password-input">
                         </div>
                     </div>
-                    <div class="mb-3 col-md-6">
-                        <label class="form-label" for="phoneNumber">Phone Number</label>
-                        <div class="input-group input-group-merge">
-                            <span class="input-group-text">US (+1)</span>
-                            <input type="text" id="phoneNumber" name="phoneNumber" class="form-control"
-                                   placeholder="202 555 0111">
+                    <div class="row g-3">
+                        <div class="col-sm-4">
+                            <label class="form-label" for="phoneNumber">Phone Number</label>
+                            <div class="input-group input-group-merge">
+                                <span class="input-group-text">US (+1)</span>
+                                <input type="text" id="phoneNumber" name="phoneNumber" class="form-control"
+                                       placeholder="202 555 0111">
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="address" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" placeholder="Address">
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <div class="col-md">
-                            <label for="name" class="mb-1">Status</label> <br>
+                        <div class="col-sm-4">
+                            <label class="mb-1">Status</label> <br>
                             <div class="form-check form-check-inline mt-3">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions1"
                                        value="option1">
                                 <label class="form-check-label" for="inlineRadio1">Action</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions1"
                                        value="option2">
                                 <label class="form-check-label" for="inlineRadio2">Inaction</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions1"
                                        value="option3" disabled="">
                                 <label class="form-check-label" for="inlineRadio3">Other (disabled)</label>
                             </div>
                         </div>
-                    </div>
-                    <div class="mb-3 col-md-6">
-                        <label for="language" class="form-label">Position</label>
-                        <select id="language" class="select2 form-select">
-                            <option value="">Select Language</option>
-                            <option value="en">English</option>
-                            <option value="fr">French</option>
-                            <option value="de">German</option>
-                            <option value="pt">Portuguese</option>
-                        </select>
+                        <div class="col-sm-4">
+                            <!--                            -->
+                            <small class="text-light fw-semibold">Default</small>
+                            <div class="mt-3">
+                                <!-- Button trigger modal -->
+                                <div class="input-group">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                            data-bs-target="#basicModal">
+                                        Position
+                                    </button>
+                                    <select class="form-select"
+                                            aria-label="Example select with button addon">
+                                        <option selected="">Select Position</option>
+                                        <option value="en">Director</option>
+                                        <option value="fr">President</option>
+                                        <option value="de">secretary</option>
+                                        <option value="pt">Employee</option>
+                                    </select>
+                                </div>
+                                <!-- Modal -->
+                                <div class="modal fade" id="basicModal" tabindex="-1" style="display: none;"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel1">Modal title</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="row">
+                                                    <div class="col mb-3">
+                                                        <label class="form-label">Code</label>
+                                                        <input type="text" class="form-control"
+                                                               placeholder="Enter Code">
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col mb-3">
+                                                        <label class="form-label">Name</label>
+                                                        <input type="text" class="form-control"
+                                                               placeholder="Enter Name">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-outline-secondary"
+                                                        data-bs-dismiss="modal">
+                                                    Close
+                                                </button>
+                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <br> <br>
                 <div class="mt-2">
                     <button type="submit" class="btn btn-primary me-2">Save changes</button>
                     <button type="reset" class="btn btn-outline-secondary">Cancel</button>
@@ -144,6 +177,8 @@
         </div>
         <!-- /Account -->
     </div>
+    <hr>
+
     <div class="card">
         <h5 class="card-header">Delete Account</h5>
         <div class="card-body">
