Oanh update _sidebar admin

--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -126,12 +126,16 @@
                     </a>
                 </li>
                 <li class="menu-item">
+                    <a th:href="@{/admin/customer}" class="menu-link">
+                        <div data-i18n="list customer">Rank</div>
+                    </a>
+                </li>
+                <li class="menu-item">
                     <a th:href="@{/admin/chat}" class="menu-link">
                         <div data-i18n="chat">Chat with customer</div>
                     </a>
                 </li>
             </ul>
         </li>
-
     </ul>
 </aside>
