--- a/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
@@ -80,12 +80,15 @@
                 <div class="modal-dialog modal-xl" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel4">Tên khách hàng</h5>
+                            <h5 class="modal-title" id="exampleModalLabel4">Thông tin khách hàng</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <div class="row">
                                 <div class="col mb-3">
+                                    <div class="col-lg-4">
+                                        <img th:src="@{/admin/assets/img/elements/20.jpg}" src="" class="w-px-200">
+                                    </div>
                                 </div>
                             </div>
                             <div class="row g-2">
