--- a/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<h4 class="fw-semibold py-3 mb-4"> Hôm nay (<script>document.write(new Date().getDate() +'/'+ new Date().getMonth()+'/' +new Date().getFullYear())</script>)</h4>
+<h4 class="fw-semibold py-3 mb-4"> Hôm nay (<script>document.write( new Date().toLocaleDateString())</script>)</h4>
 <div class="row">
     <div class="col-md-6 col-lg-3 mb-4 ">
         <div class="card h-100 border-success row" style="border-left: 5px solid;">
