--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -41,21 +41,21 @@
                         <li><a href="/promotion">CTKM</a></li>
                         <li><a href="#">Thông tin</a>
                             <ul class="dropdown">
-                                <li><a href="./about.html">Trang giới thiệu</a></li>
-                                <li><a href="./shop-details.html">Thẻ thành viên</a></li>
-                                <li><a href="/shopping-cart">Các chính sách</a></li>
-                                <li><a href="./checkout.html">Tuyển dụng</a></li>
-                                <li><a href="./blog-details.html">Tin tức</a></li>
-                                <li><a href="./blog-details.html">Liên hệ</a></li>
+                                <li><a href="#">Trang giới thiệu</a></li>
+                                <li><a href="/registercard">Thẻ thành viên</a></li>
+                                <li><a href="#">Các chính sách</a></li>
+                                <li><a href="#">Tuyển dụng</a></li>
+                                <li><a href="#">Tin tức</a></li>
+                                <li><a href="#">Liên hệ</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Thao tác</a>
                             <ul class="dropdown">
-                                <li><a href="./about.html">Đăng nhập</a></li>
-                                <li><a href="./shop-details.html">Đăng ký</a></li>
-                                <li><a href="/shopping-cart">Tra cứu hóa đơn</a></li>
-                                <li><a href="./checkout.html">Đổi hàng</a></li>
-                                <li><a href="./blog-details.html">Trả hàng</a></li>
+
+                                <li><a href="/lookuporder">Tra cứu hóa đơn</a></li>
+                                <li><a href="/completed">Hoàn thành</a></li>
+                                <li><a href="/processing">Chờ thanh toán</a></li>
+                                <li><a href="/return">Trả hàng</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -65,7 +65,7 @@
                 <div class="header__nav__option">
                     <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
                     <a href="#"><img src="/user/img/icon/heart.png" alt=""></a>
-                    <a href="/"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
+                    <a href="/shoppingcart"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
                     <div class="price">0</div>
                 </div>
             </div>
