--- a/webBanTiVi/src/main/resources/templates/user/page/logincard.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/logincard.html
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-body">
 
-                    <h4 class="mb-2">Thẻ đăng kí cho thành viên </h4>
+                    <h4 class="mb-2">Đăng nhập thẻ thành viên</h4>
                     <p class="mb-4"></p>
 
                     <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
@@ -20,10 +20,7 @@
                                     autofocus
                             />
                         </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="text" class="form-control" id="email" name="email" placeholder="Nhập Email" />
-                        </div>
+
                         <div class="mb-3 form-password-toggle">
                             <label class="form-label" for="password">Mật khẩu</label>
                             <div class="input-group input-group-merge">
@@ -39,22 +36,14 @@
                             </div>
                         </div>
 
-                        <div class="mb-3">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="terms-conditions" name="terms" />
-                                <label class="form-check-label" for="terms-conditions">
-                                    Tôi đồng ý với
-                                    <a href="javascript:void(0);">chính sách t & các điều khoản bảo mật</a>
-                                </label>
-                            </div>
-                        </div>
-                        <button class="btn btn-primary d-grid w-100">Đăng ký</button>
+
+                        <button class="btn btn-primary d-grid w-100">Đăng nhập</button>
                     </form>
 
                     <p class="text-center">
-                        <span>Bạn muốn đã có tài khoản?</span>
-                        <a href="/logincard">
-                            <span>Đăng nhập bằng tài khoản khác</span>
+                        <span>Bạn muốn đăng ký tài khoản ?</span>
+                        <a href="auth-login-basic.html">
+                            <span>Tạo tài khoản mới</span>
                         </a>
                     </p>
                 </div>
