--- a/webBanTiVi/src/main/resources/templates/user/layout/_footer.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_footer.html
@@ -14,10 +14,10 @@
                 <div class="footer__widget">
                     <h6>SẢN PHẨM</h6>
                     <ul>
-                        <li><a href="#">Trang sản phẩm</a></li>
-                        <li><a href="#">Giỏ hàng</a></li>
-                        <li><a href="#">Tra cứu hóa đơn</a></li>
-                        <li><a href="#">Chương trình khuyến mại</a></li>
+                        <li><a href="/products">Trang sản phẩm</a></li>
+                        <li><a href="/shopping-cart">Giỏ hàng</a></li>
+                        <li><a href="/lookuporder">Tra cứu hóa đơn</a></li>
+                        <li><a href="/promotions">Chương trình khuyến mại</a></li>
                     </ul>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                     <h6>THÔNG TIN</h6>
                     <ul>
                         <li><a href="#">Giới thiệu</a></li>
-                        <li><a href="#">Thẻ thành viên</a></li>
+                        <li><a href="/registercard">Thẻ thành viên</a></li>
                         <li><a href="#">Chính sách đổi trả</a></li>
                         <li><a href="#">Tuyển dụng</a></li>
                     </ul>
