--- a/webBanTiVi/src/main/resources/templates/user/page/logincard.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/logincard.html
@@ -42,7 +42,7 @@
 
                     <p class="text-center">
                         <span>Bạn muốn đăng ký tài khoản ?</span>
-                        <a href="auth-login-basic.html">
+                        <a href="/registercard">
                             <span>Tạo tài khoản mới</span>
                         </a>
                     </p>
