--- a/webBanTiVi/src/main/resources/static/user/css/style.css
+++ b/webBanTiVi/src/main/resources/static/user/css/style.css
@@ -85,7 +85,80 @@ p {
 img {
 	max-width: 100%;
 }
+section {
+	padding: 2rem 9%;
+}
 
+.btn {
+	display: inline-block;
+	margin-top: 1rem;
+	border-radius: 5rem;
+	background: #333;
+	color: #fff;
+	padding: 0.9rem 3.5rem;
+	cursor: pointer;
+	font-size: 1.7rem;
+}
+.btn:hover {
+	background: rgb(211, 96, 116);
+}
+
+.heading {
+	text-align: center;
+	font-size: 4rem;
+	color: #333;
+	padding: 1rem;
+	margin: 2rem 0;
+	background: rgba(255, 51, 153, 0.05);
+}
+.heading span {
+	color: rgb(211, 96, 116);
+}
+.about .row {
+	display: flex;
+	align-items: center;
+	gap: 2rem;
+	flex-wrap: wrap;
+	padding: 2rem 0;
+	padding-bottom: 3rem;
+}
+
+.about .row .video-container video {
+	width: 100%;
+	border: 1.5rem solid #fff;
+	border-radius: 0.5rem;
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+	height: 50%;
+	object-fit: cover;
+}
+.about .row .video-container {
+	flex: 1 1 35rem;
+	position: relative;
+}
+.about .row .content {
+	flex: 1 1 25rem;
+}
+
+/*.about .row .video-container h3 {*/
+/*	position: absolute;*/
+/*	top: 50%;*/
+/*	transform: translateY(-50%);*/
+/*	font-size: 3rem;*/
+/*	color: #333;*/
+/*	background: #fff;*/
+/*	width: 100%;*/
+/*	padding: 1rem 2rem;*/
+/*	text-align: center;*/
+/*	mix-blend-mode: screen;*/
+/*}*/
+
+.about .row .content p {
+	font-size: 1.5rem;
+	color: #999;
+	padding: 0.5rem 0;
+	padding-top: 1rem;
+	line-height: 1.5;
+}
 input:focus,
 select:focus,
 button:focus,
