--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -41,7 +41,7 @@
                         <li><a href="/promotion">CTKM</a></li>
                         <li><a href="#">Thông tin</a>
                             <ul class="dropdown">
-                                <li><a href="#">Trang giới thiệu</a></li>
+                                <li><a href="/about">Trang giới thiệu</a></li>
                                 <li><a href="/registercard">Thẻ thành viên</a></li>
                                 <li><a href="#">Các chính sách</a></li>
                                 <li><a href="#">Tuyển dụng</a></li>
@@ -56,6 +56,7 @@
                                 <li><a href="/completed">Hoàn thành</a></li>
                                 <li><a href="/processing">Chờ thanh toán</a></li>
                                 <li><a href="/return">Trả hàng</a></li>
+                                <li><a href="/shopping-detail">Chi tiết sản phẩm</a></li>
                             </ul>
                         </li>
                     </ul>
