--- a/webBanTiVi/src/main/resources/templates/user/page/shop.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/shop.html
@@ -31,21 +31,21 @@
                         <div class="accordion" id="accordionExample">
                             <div class="card">
                                 <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseOne">Categories</a>
+                                    <a data-toggle="collapse" data-target="#collapseOne">Brand</a>
                                 </div>
                                 <div id="collapseOne" class="collapse show" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="shop__sidebar__categories">
                                             <ul class="nice-scroll">
-                                                <li><a href="#">Men (20)</a></li>
-                                                <li><a href="#">Women (20)</a></li>
-                                                <li><a href="#">Bags (20)</a></li>
-                                                <li><a href="#">Clothing (20)</a></li>
-                                                <li><a href="#">Shoes (20)</a></li>
-                                                <li><a href="#">Accessories (20)</a></li>
-                                                <li><a href="#">Kids (20)</a></li>
-                                                <li><a href="#">Kids (20)</a></li>
-                                                <li><a href="#">Kids (20)</a></li>
+                                                <li><a href="#">LG</a></li>
+                                                <li><a href="#">SAMSUNG</a></li>
+                                                <li><a href="#">SONY</a></li>
+                                                <li><a href="#">SHARP</a></li>
+                                                <li><a href="#">CASPER</a></li>
+                                                <li><a href="#">AQUA</a></li>
+                                                <li><a href="#">XIAOMI</a></li>
+                                                <li><a href="#">ASHER</a></li>
+                                                <li><a href="#">COEX</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -53,16 +53,17 @@
                             </div>
                             <div class="card">
                                 <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseTwo">Branding</a>
+                                    <a data-toggle="collapse" data-target="#collapseTwo">Resolution</a>
                                 </div>
                                 <div id="collapseTwo" class="collapse show" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="shop__sidebar__brand">
                                             <ul>
-                                                <li><a href="#">Louis Vuitton</a></li>
-                                                <li><a href="#">Chanel</a></li>
-                                                <li><a href="#">Hermes</a></li>
-                                                <li><a href="#">Gucci</a></li>
+                                                <li><a href="#">4K</a></li>
+                                                <li><a href="#">8K</a></li>
+                                                <li><a href="#">Full HD</a></li>
+                                                <li><a href="#">HD</a></li>
+                                                <li><a href="#">2K</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -94,28 +95,28 @@
                                 <div id="collapseFour" class="collapse show" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="shop__sidebar__size">
-                                            <label for="xs">xs
+                                            <label for="xs">27 inch
                                                 <input type="radio" id="xs">
                                             </label>
-                                            <label for="sm">s
+                                            <label for="sm">32 inch
                                                 <input type="radio" id="sm">
                                             </label>
-                                            <label for="md">m
+                                            <label for="md">39 inch
                                                 <input type="radio" id="md">
                                             </label>
-                                            <label for="xl">xl
+                                            <label for="xl">42 inch
                                                 <input type="radio" id="xl">
                                             </label>
-                                            <label for="2xl">2xl
+                                            <label for="2xl">43 inch
                                                 <input type="radio" id="2xl">
                                             </label>
-                                            <label for="xxl">xxl
+                                            <label for="xxl">48 inch
                                                 <input type="radio" id="xxl">
                                             </label>
-                                            <label for="3xl">3xl
+                                            <label for="3xl">50 inch
                                                 <input type="radio" id="3xl">
                                             </label>
-                                            <label for="4xl">4xl
+                                            <label for="4xl">55 inch
                                                 <input type="radio" id="4xl">
                                             </label>
                                         </div>
@@ -135,45 +136,6 @@
                                             <label class="c-2" for="sp-2">
                                                 <input type="radio" id="sp-2">
                                             </label>
-                                            <label class="c-3" for="sp-3">
-                                                <input type="radio" id="sp-3">
-                                            </label>
-                                            <label class="c-4" for="sp-4">
-                                                <input type="radio" id="sp-4">
-                                            </label>
-                                            <label class="c-5" for="sp-5">
-                                                <input type="radio" id="sp-5">
-                                            </label>
-                                            <label class="c-6" for="sp-6">
-                                                <input type="radio" id="sp-6">
-                                            </label>
-                                            <label class="c-7" for="sp-7">
-                                                <input type="radio" id="sp-7">
-                                            </label>
-                                            <label class="c-8" for="sp-8">
-                                                <input type="radio" id="sp-8">
-                                            </label>
-                                            <label class="c-9" for="sp-9">
-                                                <input type="radio" id="sp-9">
-                                            </label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-heading">
-                                    <a data-toggle="collapse" data-target="#collapseSix">Tags</a>
-                                </div>
-                                <div id="collapseSix" class="collapse show" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <div class="shop__sidebar__tags">
-                                            <a href="#">Product</a>
-                                            <a href="#">Bags</a>
-                                            <a href="#">Shoes</a>
-                                            <a href="#">Fashio</a>
-                                            <a href="#">Clothing</a>
-                                            <a href="#">Hats</a>
-                                            <a href="#">Accessories</a>
                                         </div>
                                     </div>
                                 </div>
